--- a/src/pages/2021/rfp.mdx
+++ b/src/pages/2021/rfp.mdx
@@ -101,6 +101,13 @@ There are two options for Program Submissions:
   perspective on a similar topic. Panels can be collaborative across different
   universities, companies, and industries depending on the topic. Members
   participating in the discussion are expected to be part of a live discussion.
+  
+- **Lightning Talk (New to 2021!)**: We define a lighting talk as an individual
+  giving a quick introduction to pique interest in a specific STEM or LGBT+ 
+  related topic. This may be a resource you have found interesting or an issue
+  that future STEM professionals could investigate. These talks will be 8 minutes
+  long with 2 minutes for questions. This is an excellent opportunity to give an
+  oral presentation if a 50 minute presentation is beyond the scope of your topic!
 
 ## Proposal Components
 
@@ -112,13 +119,13 @@ PM PDT. Program assessment will not be provided by oSTEM.
 
 - **Session Title (5%):** Clearly able to identify program topic and how this
   relates to the oSTEM mission (20 words max).
-- **Abstract for Program Book (5%):** Succinct description of the goals of the
+- **Abstract for Program Book (10%):** Succinct description of the goals of the
   workshop and what participants will learn by attending (5%)
 - **What is the value of this workshop to the LGBTQ+ STEM Community? (25%)**
   Value is described and fully justified. Relevance to LGBTQ+ and STEM
   communities is included. What makes this program unique to this conference?
   (500 words max)
-- **How will the proposed program engage the audience? (15%)**
+- **How will the proposed program engage the audience? (20%)**
   Activities/Strategies for engagement are fully explained. How engagement with
   the audience will supplement the presentation or panel is included. (300 words
   max)
@@ -134,8 +141,6 @@ PM PDT. Program assessment will not be provided by oSTEM.
 - \*\*Presenter identity & experiences match the proposed topic (15%):
   Presenter(s) demonstrate a basis of knowledge for this proposed program.
   Consistency between presented topic, value to LGBTQ+ community, and STEM.
-
-- **Clarity & Completeness (5%)**
 
 In addition to the criteria above, please ensure you have provided the following
 information:
