Update schedule.mdx (#1)
* Update schedule.mdx

added content from 2021 schedule high level schedule

* Fix indendation

Co-authored-by: Travis DePrato <773453+travigd@users.noreply.github.com>

--- a/src/pages/2021/schedule.mdx
+++ b/src/pages/2021/schedule.mdx
@@ -2,9 +2,43 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 
 <SiteLayout title="Schedule">
 
-# Conference schedule
+# High-Level Conference Schedule
 
-The oSTEM conference team is hard at work in the planning stages of the 2021
-conference. Check back here later for the full schedule.
+All times listed are in Pacific Standard Time (PST). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
+  
+  
+## Thursday, October 28
+
+- 9:00 AM - 6:00 PM     Community Breakouts
+- 10:00 AM - 12:00 PM   Sponsored Workshop Blocks
+- 12:00 PM - 4:00 PM	  Career & Graduate School Expo - Day 1
+- 12:00 PM - 3:00 PM	  Poster Session
+
+## Friday, October 29
+
+- 8:30 AM - 9:45 AM  Workshop Block 1
+- 10:00 AM - 11:45 AM	Plenary Session
+- 12:15 PM - 1:30 PM	Workshop Block 2
+- 2:00 PM - 3:15 PM	Workshop Block 3
+- 2:00 PM - 3:00 PM	oSTEM Scholarship Awardees Reception
+- 2:30 PM - 3:30 PM	Help! I Joined oSTEM but what do I do now?
+- 2:30 PM - 4:30 PM	Career & Graduate School Expo - Day 2
+
+## Saturday, October 30
+
+- 8:30 AM - 9:45 AM	Workshop Block 4
+- 10:00 AM - 11:45 AM	Plenary Session
+- 12:15 PM - 1:30 PM	Workshop Block 5
+- 2:00 PM - 3:15 PM	Workshop Block 6
+- 4:00 PM - 5:00 PM	Social Mixers
+
+## Sunday, October 31
+
+- 9:00 AM - 12:00 PM	Gender Affirmation Symposium
+- 10:00 AM - 11:30 AM	Chapter Leader Summit
+- 12:00 PM - 1:30 PM	oSTEM Annual Report Preview Presentation
+
+
+If you have any questions please reach out at [conference@ostem.org](mailto:conference@ostem.org?subject=High-Level%20Schedule%20Question%20)
 
 </SiteLayout>
