--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -6,7 +6,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 # 11th Annual oSTEM Conference 2021
 
 <p className="text-3xl font-display">
-  Dare to <span className="text-halloween font-bold">BOO</span> different
+  Your seat at our table
 </p>
 <p className="text-3xl font-display">
   October 29 &ndash; November 1, 2021, Virtual
