--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -19,4 +19,8 @@ import { SiteLayout } from "../components/layout/SiteLayout";
   <CTAButton onClick="/2021/rfp">Submit a Proposal</CTAButton>
 </div>
 
+<div className="text-2xl flex justify-center p-8">
+  <CTAButton onClick="https://www.ostem.org/page/newsletter">Sign Up for Our Newsletter</CTAButton>
+</div>
+
 </SiteLayout>
