Changed "volunteer milestones" to "submission milestones"

--- a/src/pages/2021/call-for-presentations.mdx
+++ b/src/pages/2021/call-for-presentations.mdx
@@ -38,7 +38,7 @@ attendees, which will allow for a virtual engagement similar to an in-person pos
 the option to respond to questions/comments throughout the duration of the conference.  
 
 
-## Volunteer Milestones
+## Submission Milestones
 
 - July 26: Call for Poster/Symposium Opens
 - October 1:  Application Closes (Posters Accepted on rolling basis)
@@ -49,8 +49,8 @@ the option to respond to questions/comments throughout the duration of the confe
 
 There are two different categories to submit:
 
-1. Poster Presentation Only - You are only interested in having your poster on display in Gather during the designated time period. 
-2. Symposium/Poster Presentation - You are interested in giving an oral presentation on your research topic. If not selected for the research symposium, you would like to present a poster on your research. 
+- Poster Presentation Only - You are only interested in having your poster on display in Gather during the designated time period. 
+- Symposium/Poster Presentation - You are interested in giving an oral presentation on your research topic. If not selected for the research symposium, you would like to present a poster on your research. 
 
 As part of the application process, you will be required to upload the poster in a zoomable PDF format. 
 
