--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -12,7 +12,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 
 <p className="flex justify-center text-3xl font-display">Your seat at our table</p>
 <p className="flex justify-center text-3xl font-display">
-  October 29 &ndash; November 1, 2021, Virtual
+  October 28 &ndash; 31, 2021, Virtual
 </p>
 
 <div className="text-2xl flex justify-center p-8">
