Same display just update in syntax (#9)
Co-authored-by: cmytelka <you@example.com>
Co-authored-by: Travis DePrato <773453+travigd@users.noreply.github.com>

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -4,14 +4,14 @@ import { SiteLayout } from "../components/layout/SiteLayout";
 
 <SiteLayout>
 
-<p className="flex justify-center text-4xl font-display">11th Annual oSTEM Conference 2021</p>
+<h1 className="text-center font-display">11th Annual oSTEM Conference 2021</h1>
 
 <ConferenceCountdown />
 
-<img src="/images/conference-pic.jpg" alt="Conference Picture" style={{borderRadius: '30px' ,  padding: '1em'}}/>
+<img src="/images/2021/podium-presenters.jpg" alt="" className="rounded-3xl p-3"/>
 
-<p className="flex justify-center text-3xl font-display">Your seat at our table</p>
-<p className="flex justify-center text-3xl font-display">
+<p className="text-center text-3xl font-display">Your seat at our table</p>
+<p className="text-center text-3xl font-display">
   October 28 &ndash; 31, 2021, Virtual
 </p>
 
