Apply consistent styling for all pages This commit applies minor styling changes to all current markdown pages. It matches the header styling changes from the main page. It also adds a callout element to bring attention to the status of current submissions.

--- a/src/pages/2021/awards.mdx
+++ b/src/pages/2021/awards.mdx
@@ -3,13 +3,27 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 
 <SiteLayout>
 
-# Conference Awards
+<div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
+    <p className="text-5xl font-display font-black">
+        Awards
+    </p>
+</div>
 
-## 2021 Award Nominations Currently Open
+               
+
 
 oSTEM's awards programs recognize the achievements of our members, chapters, and supporters during the oSTEM Annual Conference. Please review the award descriptions below and provide nominations for those individuals and groups you believe deserve recognition.
- 
-Our Awards:
+
+<div className="bg-tint-spruce-light text-2xl mt-4 p-8 rounded">
+    <p className="flex items-center">
+        <svg xmlns="http://www.w3.org/2000/svg" className="h-6 w-6 mr-3" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+            <path strokeLinecap="round" strokeLinejoin="round" strokeWidth={2} d="M12 8v4m0 4h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
+        </svg>
+        2021 Award Nominations are currently&nbsp;<strong>open</strong>!
+    </p>
+</div> 
+
+### Our Awards:
 - Global STEM Service Award
 - Sponsor Awards
     - Strategic Alliance Award - Organization
