--- a/src/pages/2021/call-for-presentations.mdx
+++ b/src/pages/2021/call-for-presentations.mdx
@@ -3,29 +3,10 @@ import { CTAButton } from "../../components/button/CTAButton";
 
 <SiteLayout title="Call for Presentations">
 
-<div className="wrapper relative mb-8">
-  <div className="content">
-    <h1>Call for Poster and Symposium Presentations</h1>
-    <CTAButton onClick={"https://www.jotform.com/build/211807150158147"}>
-    Submit a Poster/Presentation
-    </CTAButton>
-  </div>
-  <style jsx>{`
-    .wrapper {
-      background-image: url("/images/pattern/rainbox-box-pattern-desaturated.png");
-      background-repeat: repeat;
-      background-size: contain;
-      min-height: 20rem;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 2rem;
-      font-size: 2rem;
-      text-align: center;
-      font-weight: bold;
-    }
-  `}</style>
+<div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
+    <p className="text-5xl font-display font-black">Call for Poster and Symposium Presentations</p>
 </div>
+
 
 The 2021 oSTEM and Annual Conference Poster Session is intended for undergraduate students, graduate students, 
 and postdocs to showcase their research to other conference attendees. Anyone performing academic or industry 
@@ -37,11 +18,16 @@ This year, poster presentations will be virtual. We will be using Gather to disp
 attendees, which will allow for a virtual engagement similar to an in-person poster session. You will have 
 the option to respond to questions/comments throughout the duration of the conference.  
 
+<div className="text-center text-2xl m-4">
+    <CTAButton onClick={"https://www.jotform.com/build/211807150158147"}>
+        Submit a Poster/Presentation
+    </CTAButton>
+</div>
 
 ## Submission Milestones
 
 - July 26: Call for Poster/Symposium Opens
-- October 1:  Application Closes (Posters Accepted on rolling basis)
+- October 1:  Application Closes (Posters are accepted on a rolling basis)
 - October 8:  All poster submission/symposium speakers notified. 
 
 
