--- a/src/pages/2021/schedule.mdx
+++ b/src/pages/2021/schedule.mdx
@@ -2,7 +2,11 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 
 <SiteLayout title="Schedule">
 
-# High-Level Conference Schedule
+<div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
+    <p className="text-5xl font-display font-black">
+        High Level Conference Schedule
+    </p>
+</div>
 
 All times listed are in Pacific Standard Time (PST). Please note that this is a high-level schedule and a more detailed schedule will be made available closer to the conference.
   
