--- a/src/pages/2021/sponsors.mdx
+++ b/src/pages/2021/sponsors.mdx
@@ -2,7 +2,11 @@ import { SiteLayout } from "../../components/layout/SiteLayout";
 
 <SiteLayout title="Schedule">
 
-# Conference sponsors
+<div className="border-b-4 border-mulberry border-solid pb-4 mb-4 text-center">
+    <p className="text-5xl font-display font-black">
+        Conference Sponsors
+    </p>
+</div>
 
 The oSTEM conference team is hard at work in the planning stages of the 2021
 conference. Check back here later for the full list of sponsors.
