--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -14,9 +14,9 @@ import { SiteLayout } from "../components/layout/SiteLayout";
     October 28 &ndash; 31, 2021 | Virtual
     </p>
 </div>
-<div class="grid grid-cols-5 gap-y-2 mt-9">
-        <div className="rounded-l col-span-2 tint tint-dark"><img className="rounded-l object-cover w-full h-full" src="/images/oSTEM.2019.0049_Update_BannerSize.jpg" alt=""/></div>
-        <div class="rounded-r col-span-3 p-4 bg-tint-spruce-light">
+<div class="grid md:grid-cols-5 gap-y-2 mt-9">
+        <div className="rounded-l md:col-span-2 tint tint-dark"><img className="rounded-l object-cover w-full h-full" src="/images/oSTEM.2019.0049_Update_BannerSize.jpg" alt=""/></div>
+        <div class="rounded-r md:col-span-3 p-4 bg-tint-spruce-light">
             <h3>Conference for LGBTQ+ people in STEM Fields</h3>
             <p>
                 The oSTEM Conference returns agains this year in a virtual format.
@@ -30,7 +30,7 @@ import { SiteLayout } from "../components/layout/SiteLayout";
                 <CTAButton onClick="https://events.bizzabo.com/343425">Register for the Conference</CTAButton>
             </div>
         </div>
-    <div class="rounded-l col-span-3 bg-tint-apricot p-4">
+    <div class="rounded-l md:col-span-3 bg-tint-apricot p-4">
         <h3>Career and Graduate School Expo</h3>
         <p>
             We have a dedicated Career and Graduate School Expo, allowing you to find the best opportunities from organizations and schools that will accept and support you.
@@ -44,9 +44,9 @@ import { SiteLayout } from "../components/layout/SiteLayout";
             <CTAButton onClick="https://www.ostem.org/page/sponsorship-opportunities">Exhibitor Information</CTAButton>
         </div>
     </div>
-    <div class="rounded-r col-span-2 tint tint-light"><img class="object-cover w-full h-full rounded-r" src="/images/oSTEM.2019.0111.jpg" alt=""/></div>
-    <div class="rounded-l col-span-2 tint tint-dark"><img class="object-cover w-full h-full rounded-l" src="/images/oSTEM.2019.0077.jpg" alt=""/></div>
-    <div class="rounded-r col-span-3 bg-tint-spruce-light p-4">
+    <div class="rounded-r md:col-span-2 tint tint-light"><img class="object-cover w-full h-full rounded-r" src="/images/oSTEM.2019.0111.jpg" alt=""/></div>
+    <div class="rounded-l md:col-span-2 tint tint-dark"><img class="object-cover w-full h-full rounded-l" src="/images/oSTEM.2019.0077.jpg" alt=""/></div>
+    <div class="rounded-r md:col-span-3 bg-tint-spruce-light p-4">
         <h3>Affinity Group Breakouts and other Programs</h3>
         <p>
             One of the core programs we offer during our conference are our Affinity Group breakouts.
